--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
             <div class="carousel-inner innerHeaderCarousel">
                 <!-- Première Image -->
                 <div class="carousel-item active itemHeaderCarousel">
-                    <img src="img/image1.jpeg" class="img-carousel" alt="Plage">
+                    <img src="image1.jpeg" class="img-carousel" alt="Plage">
                     <div class="carousel-caption captionHeaderCarousel">
                         <h5 class="texte-h5">Bienvenue chez <span style="color: darkorange;">Service Rio</span></h5>
                         <p class="texte-p">Nous vous offrons des services sur mesure pour répondre à vos besoins
@@ -962,7 +962,7 @@
                 </div>
                 <!-- Deuxième Image -->
                 <div class="carousel-item itemHeaderCarousel">
-                    <img src="img/image2.jpeg" class="img-carousel" alt="Montagne">
+                    <img src="image2.jpeg" class="img-carousel" alt="Montagne">
                     <div class="carousel-caption captionHeaderCarousel">
                         <h5 class="texte-h5">Qu'est ce que <span style="color: darkorange;">Service Rio</span></h5>
                         <p class="texte-p">Flexibilité, rapidité et souvent des coûts réduits, tout en permettant une 
@@ -971,7 +971,7 @@
                 </div>
                 <!-- Troisième Image -->
                 <div class="carousel-item itemHeaderCarousel">
-                    <img src="img/image3.jpeg" class="img-carousel" alt="Forêt">
+                    <img src="image3.jpeg" class="img-carousel" alt="Forêt">
                     <div class="carousel-caption captionHeaderCarousel">
                         <h5 class="texte-h5">Publiez vos <span style="color: darkorange;">produits</span>
                             et vos <span style="color: darkorange;">compétences</span></h5>
